# mimalloc_demo

./: CMakeLists.txt  README.md  guide.md  main.cpp
MyDll/: CMakeLists.txt
MyDll/src/: mylib.cpp  mylib.h
TestApp/: CMakeLists.txt
TestApp/src/: main.cpp
